--- a/applicaBarcode/.classpath
+++ b/applicaBarcode/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/tommolini/Downloads/itextpdf-5.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/tommolini/Downloads/pdfbox-2.0.13 (1).jar"/>
+	<classpathentry kind="lib" path="C:/Users/tommolini/Downloads/Librerie Java/itextpdf-5.4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tommolini/Downloads/Librerie Java/pdfbox-2.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
